# ha-octopus-spain

./: pyproject.toml
.github/workflows/: pylint.yaml  release.yaml
custom_components/octopus_spain/: manifest.json  sensor.py
custom_components/octopus_spain/api/: __init__.py  get_accounts.py  get_solar.py  login.py  octopus_api.py
custom_components/octopus_spain/lib/: octopus_spain.py
custom_components/octopus_spain/queries/: graphql.config.yml  queries.graphql
