[tool.poetry]
name = "octopus-spain"
version = "2.0"
description = "Home Assistant custom component to Octopus Energy Spain"
authors = ["Miguel Ángel López <miguel.angel.lopez.vicente@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/miguelangellv/octous_spain"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
homeassistant = ">=2024.10.0,<2024.12.0"
pydantic = ">=2.9.0"
httpx = ">=0.27.2"
[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.2"
pre-commit-hooks = "4.5.0"
pylint = "3.1.0"
ruff = "0.3.4"
ariadne-codegen = "0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["custom_components/octopus_spain"]


[tool.ariadne-codegen]
remote_schema_url = "https://api.oees-kraken.energy/v1/graphql/"
queries_path = "custom_components/octopus_spain/queries"
client_name = "OctopusAPI"
client_file_name = "octopus_api"
target_package_name = "api"
target_package_path = "custom_components/octopus_spain"
include_all_enums = false
include_all_inputs = false
include_comments = "none"

[tool.ruff.lint]
ignore = [
    "ANN101", # Self... explanatory
    "ANN401", # Opiniated warning on disallowing dynamically typed expressions
    "D203", # Conflicts with other rules
    "D213", # Conflicts with other rules
    "TID252", # Relative imports
    "RUF012", # Just broken

    # Formatter conflicts
    "COM812",
    "COM819",
    "D206",
    "E501",
    "ISC001",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]
select = ["ALL"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
voluptuous = "vol"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "homeassistant",
]
combine-as-imports = true

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by ruff
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
    "abstract-method",
    "duplicate-code",
    "format",
    "unexpected-keyword-arg",
    "used-before-assignment"
]
